fix (#2299): Improve spacing for sponsors on mobile

--- a/themes/vue/source/css/_sponsors-sidebar.styl
+++ b/themes/vue/source/css/_sponsors-sidebar.styl
@@ -25,9 +25,6 @@
   text-align: center
   margin-bottom: 20px
 
-#sidebar-sponsors-special
-  margin-top -10px
-
 #sidebar-sponsors-platinum-left
   display block
 
